docs: clarify Ignite run command and update Spring Boot parent